# dephy-id-v2

./: .gitignore  Anchor.toml  Cargo.toml  codama.js  codama.json  eslint.config.mjs  package.json  tsconfig.json
app/: README.md  package.json  react-router.config.ts  tsconfig.json  vite.config.ts
app/src/: app.css  root.tsx  routes.ts
app/src/components/: app-alert.tsx  app-header.tsx  app-layout.tsx  common-ui.tsx  use-transaction-toast.tsx
app/src/components/account/: account-data-access.tsx  account-ui.tsx
app/src/components/cluster/: cluster-ui.tsx
app/src/components/dephy-id/: dephy-id-data-access.tsx  dephy-id-ui.tsx
app/src/components/dev-tools/: dev-tools-data-access.ts  dev-tools-ui.tsx
app/src/components/dodp-tools/: dodp-tools-data-access.ts  dodp-tools-ui.tsx
app/src/components/stake-pool/: stake-pool-data-access.tsx  stake-pool-ui.tsx
app/src/lib/: das.ts  program-ids.ts  utils.ts
app/src/routes/: account-detail.tsx  account-index.tsx  dephy-id-index.tsx  dev-tools.tsx  device-detail.tsx  dodp-tools.tsx  home.tsx  nft-stake-detail.tsx  nft-stake-manager.tsx  nft-stakes-for-user.tsx  product-detail.tsx  stake-pool-detail.tsx  stake-pool-index.tsx  user-stake-detail.tsx  user-stakes-for-user.tsx
cli/: common.ts  dephy-id-cli.ts  dev-tools-cli.ts  stake-pool-cli.ts
clients/dephy-id-stake-pool/js/: package.json
clients/dephy-id/js/: package.json
clients/js/: package.json
codama/: dephy-id-stake-pool.js  dephy-id.js
examples/: create-device.ts
programs/dephy-id/: Cargo.toml  keypair.json
programs/dephy-id-stake-pool/: Cargo.toml
programs/dephy-id-stake-pool/src/: constants.rs  error.rs  lib.rs  state.rs  utils.rs
programs/dephy-id-stake-pool/src/instructions/: announce_update_config.rs  approve_withdraw.rs  cancel_update_config.rs  claim.rs  close_nft_stake.rs  close_nft_stake_with_mpl_core.rs  confirm_update_config.rs  create_nft_stake.rs  create_nft_stake_with_mpl_core.rs  create_stake_pool.rs  deposit.rs  feed.rs  get_claimable.rs  initialize.rs  mod.rs  prepare_reward_token_accounts.rs  reallocate_stake.rs  redeem_withdraw.rs  request_withdraw.rs  unstake_nft.rs  withdraw.rs
programs/dephy-id/src/: constants.rs  error.rs  lib.rs  state.rs
programs/dephy-id/src/instructions/: create_device.rs  create_product.rs  initialize.rs  mod.rs  update_mint_authority.rs
programs/dephy-id/src/state/: dephy_account.rs  mod.rs
scripts/: cli.ts  custom_visitors.ts
tests/: 1.dephy-id.test.ts  2.dephy-id-stake-pool.test.ts  dephy-id.ts
