[workspace]
members = ["programs/*"]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
anchor-lang = { version = "0.32.1" }
anchor-spl = "0.32.1"
borsh = "1.5"
num-derive = "^0.4"
num-traits = "^0.2"
thiserror = "2"
base64 = "^0.22.0"
serde = "^1.0"
serde_with = "^3.12"
serde_json = "^1.0"
modular-bitfield = "^0.11.2"
rmp-serde = "^1.3.0"

solana-program = "2"
solana-pubkey = "2"
solana-account-info = "2"
solana-instruction = "2"
solana-program-error = "2"
solana-msg = "2"
solana-decode-error = "2"
solana-program-entrypoint = "2"
solana-cpi = "2"
